<resources>
    <string name="app_name">ContactsManager</string>
    <string name="show_additional_fields">Show Additional Fields</string>
    <string name="hide_additional_fields">Hide Additional Fields</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

</resources>
